Bug 1969141 - Fix version check for bug 1958174's workaround. r=stransky

Differential Revision: https://phabricator.services.mozilla.com/D252003